初步完成博客功能。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     cache: false
   profiles:
     active: dev
+  messages:
+    basename: i18n/messages
 
 comment.avatar: /images/avatar.png
 
